# task-service

./: Dockerfile  PROJECT_TREE.txt  PROJECT_TREE_DDD.txt  README  pyproject.toml
app/: main.py
app/core/: config.py
app/core/celery/: celery.py
app/kafka/: kf_helper.py
app/kafka/repositories/: kafka_repositories.py
app/kafka/services/: kafka_service.py
app/tasks/: celery.py  tasks.py
app/tasks/email/: email.py
app/templates/: pod_reg.html
